Polished home page UI, improved media layout, fixed create-post preview and navbar spacing

--- a/posts/static/posts/css/home.css
+++ b/posts/static/posts/css/home.css
@@ -6,6 +6,7 @@ body {
   font-family: "Inter", sans-serif;
   margin: 0;
   padding: 0;
+  margin-left: 240px;
 }
 
 /* Center main feed */
